<resources>
    <string name="app_name">Little Books - Admin</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="name">Name</string>
    <string name="email_example">abc@example.com</string>
    <string name="book_details">Book Details</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="size">Size</string>
    <string name="views">Views</string>
    <string name="downloads">Downloads</string>
    <string name="the_description">The Description</string>
    <string name="Comments">Comments</string>
    <string name="all">All</string>
    <string name="do_you_want_to_log_out">Do you want to log out?</string>
    <string name="do_you_want_to_logout">Do you want to log out?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="none_display">There are no items to display</string>
    <string name="editors_choice">Editor\'s Choice</string>
    <string name="most_views">Most Views</string>
    <string name="most_loves">Most Loves</string>
    <string name="most_downloads">Most Downloads</string>
    <string name="details_books">Details Book</string>
    //Pages
    <string name="favorites">Favorites</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="my_books">My Books</string>
    <string name="privacy_policy">privacy Policy</string>
    <string name="publishers_books">Publisher Books</string>
    <string name="ok">@android:string/ok</string>
    <string name="choose_book">Choose Book</string>
    <string name="add_new_book">Add New Book</string>
    <string name="add_new_category">Add New Category</string>
    <string name="edit_book">Edit Book</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_category">Edit Category</string>
    <string name="do_you_want_to_delete_the_book">Do you want to delete the book?</string>
    <string name="do_you_want_to_delete_the_category">Do you want to delete the category?</string>
    <string name="comment">Comment</string>
    <string name="add_comment">Add Comment</string>
    <string name="submit">Submit</string>
    <string name="users">Users</string>
    <string name="publishers">Publishers</string>
    <string name="top_publishers">Top Publishers</string>
    <string name="slider_show">Slider Show</string>
    <string name="username">Username</string>
    <string name="search">Search</string>
    //Slider_Show
    <string name="plus_slider">+</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="teen">10</string>
    <string name="eleven">11</string>
    <string name="twelfth">12</string>
    <string name="thirteen">13</string>
    <string name="fourteenth">14</string>
    <string name="fifteenth">15</string>
    <string name="sixteen">16</string>
    <string name="seventeen">17</string>
    <string name="eighteen">18</string>
    <string name="nineteen">19</string>
    <string name="twenty">20</string>
    <string name="edit">Edit</string>
    <string name="zero">0</string>
    //Other
    <string name="profile_image">Profile Image</string>
    <string name="one_hundred">100</string>
    <string name="default_date">dd/MM/yyyy</string>
    <string name="default_size">0Mb</string>
    <string name="all_books">All Books</string>
    <string name="users_ads">Users ADs</string>
    <string name="number_placeholder">(%1$d)</string>
    <string name="newest_users">Newest Users</string>
    <string name="ad_load">Ad Load</string>
    <string name="ad_click">Ad Click</string>
    <string name="info_ads">Info ADs</string>
    <string name="categories">Categories</string>
    <string name="loves">Loves</string>
    <string name="book_title">Book Title</string>
    <string name="choose_category">Choose Category</string>
    <string name="book_category">Book Category</string>
    <string name="password_hint">********</string>
    <string name="close">Close</string>
    <string name="done">Done</string>
    <string name="crop_image">Crop Image</string>
    <string name="dashboard">Dashboard</string>
    <string name="ads">AD\'s</string>
    <string name="error_message">Error! %1$s</string>
    <string name="error_occurred">An error occurred. Please try again.</string>
    <string name="invalid_email">Invalid email pattern&#8230;!</string>
    <string name="enter_email">Enter email&#8230;!</string>
    <string name="enter_password">Enter password&#8230;!</string>
    <string name="logging_in">Logging In&#8230;</string>
    <string name="successfully_uploaded">Successfully uploaded&#8230;</string>
    <string name="enter_title">Enter Title&#8230;</string>
    <string name="enter_description">Enter Description&#8230;</string>
    <string name="pick_category">Pick Category&#8230;</string>
    <string name="pick_book">Pick Book&#8230;</string>
    <string name="loading_categories">Loading categories&#8230;</string>
    <string name="cancelled_picking_book">Cancelled picking book</string>
    <string name="not_logged_in">You\'re not logged in&#8230;</string>
    <string name="comment_added">Comment Added&#8230;</string>
    <string name="enter_comment">Enter your comment&#8230;</string>
    <string name="permission_denied">Permission was denied&#8230;</string>
    <string name="book_info_updated">Book info updated&#8230;</string>
    <string name="category_updated">Category updated&#8230;</string>
    <string name="profile_updated">Profile updated&#8230;</string>
    <string name="enter_name">Enter name&#8230;</string>
    <string name="books_deleted_successfully">Books Deleted Successfully&#8230;</string>
    <string name="category_deleted_successfully">category Deleted Successfully&#8230;</string>
    <string name="saved_to_download_folder">Saved to Download Folder</string>
    <string name="editors_choice_updated">Editor\'s Choice updated&#8230;</string>
    <string name="choose_options">Choose Options</string>
    <string name="sending_password_recovery">Sending password recovery to instructions to %1$s</string>
    <string name="instructions_sent">Instructions to reset password sent to %1$s</string>
    <string name="failed_to_send">Failed to send to due to %1$s</string>
    <string name="uploading_book">Uploading Book&#8230;</string>
    <string name="updating_image_book">Updating Image Book&#8230;</string>
    <string name="updating_book_info">Updating book info&#8230;</string>
    <string name="uploading_category">Uploading Category&#8230;</string>
    <string name="updating_category">Updating Category&#8230;</string>
    <string name="updating_category_image">Updating category image&#8230;</string>
    <string name="pick_image">Pick Image&#8230;</string>
    <string name="updating_user_profile">Updating user profile&#8230;</string>
    <string name="adding_comment">Adding comment&#8230;</string>
    <string name="server_returned_http">Server returned HTTP %1$d</string>
    <string name="error_on_page">Error on page %1$d %2$s</string>
    <string name="failed_to_load_pdf">Failed to load PDF: %1$s</string>
    <string name="posting_photo">Posting photo&#8230;</string>
    <string name="photo_posted">The photo has been posted</string>
    <string name="deleting_item">Deleting %1$s &#8230;</string>
    <string name="downloading_item">Downloading %1$s&#8230;</string>
    <string name="updating_editors_choice">Updating Editor\'s Choice&#8230;</string>
    <string name="failed_saving_to_download_folder">Failed saving to Download Folder due to %1$s</string>
    <string name="image_updated">Image updated&#8230;</string>
    <string name="delete">Delete</string>
    <string name="enter_privacy_policy">Enter Privacy Policy&#8230;</string>
    <string name="privacy_policy_updated">Privacy Policy updated&#8230;</string>
    <string name="no_image_selected">No image selected</string>
    <string name="crop_failed">Crop failed: %1$s</string>
    <string name="delete_comment">Delete Comment</string>
    <string name="deleted">Deleted&#8230;</string>
    <string name="are_you_sure_delete_comment">Are you sure you want to delete this comment?</string>
    <string name="cancel">Cancel</string>
    <string name="slider_show_count">Slider Show (%1$d)</string>
    <string name="pages_count_placeholder">%1$d/%2$d</string>
    <string name="number_placeholder_no_parentheses">%1$d</string>
    <string name="no_internet_connection">No internet connection</string>

    <string name="please_wait">Please wait&#8230;</string>
    <string name="loading">Loading&#8230;</string>
</resources>