<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="all"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?colorOnBackground"
    android:padding="20dp">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_back_white"
        android:contentDescription="@null"
        app:tint="?colorError" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/back"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:text="@string/add_comment"
        android:textAlignment="center"
        android:textColor="?colorError"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/commentTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/back"
        android:layout_marginTop="10dp"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button3"
            android:drawableStart="@drawable/ic_comment_black"
            android:drawablePadding="10dp"
            android:hint="@string/comment"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="50"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/commentTil"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/button6"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/white" />

</RelativeLayout>
