<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorOnBackground"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_page_event" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="5dp"
            android:paddingBottom="10dp">

            <HorizontalScrollView
                android:id="@+id/scrollSwitchUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="5dp"
                android:paddingBottom="5dp"
                android:scrollbarSize="0dp"
                android:scrollbarThumbHorizontal="@color/white">

                <LinearLayout
                    android:id="@+id/linearSwitchUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:elevation="6dp"
                        app:cardBackgroundColor="?mc_bg"
                        app:cardCornerRadius="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="20dp"
                            android:paddingVertical="10dp"
                            android:text="@string/all"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/users"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:elevation="6dp"
                        app:cardBackgroundColor="?mc_bg"
                        app:cardCornerRadius="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="20dp"
                            android:paddingVertical="10dp"
                            android:text="@string/users"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/publishers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:elevation="6dp"
                        app:cardBackgroundColor="?mc_bg"
                        app:cardCornerRadius="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="20dp"
                            android:paddingVertical="10dp"
                            android:text="@string/publishers"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </HorizontalScrollView>

            <LinearLayout
                android:id="@+id/emptyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="100dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/none_display"
                    android:textColor="?colorError"
                    android:textSize="32sp" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginVertical="50dp"
                android:indeterminateDrawable="@drawable/progress_bar_2"
                android:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:spanCount="2"
                tools:listitem="@layout/item_publisher" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>